--- a/index.html
+++ b/index.html
@@ -34,30 +34,13 @@
             <section id="banner">
                 <div class="inner">
                     <h2>COSTELADA <img src="images/zegarapa.png" alt="Imagem Costelada" /></h2>
-                    <p style="position: absolute; left: 20px; font-size: 20px; font-weight: bold;">Costela a vontade por R$70,00</p>
+                    <p>Coma a vontade por R$70,00</p>
                 
                     <ul class="actions special">
                         <li><a href="#" class="button primary">Comprar Ingresso!</a></li>
                     </ul>
                 </div>
-                <a href="#one" class="more scrolly">Ler mais</a>
-            </section>
-
-            <!-- One -->
-            <section id="one" class="wrapper style1 special">
-                <div class="inner">
-                    <header class="major">
-                        <h2>Um evento nunca feito antes!<br />
-                        Costela à vontade por um preço acessível a todos</h2>
-                        <p>Uma experiência gastronômica única! Costela no fogo de chão, temperada à perfeição<br />
-                        Servida à vontade para você aproveitar sem limites!</p>
-                    </header>
-                    <ul class="icons major">
-                        <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-                        <li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-                        <li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-                    </ul>
-                </div>
+                <a href="#two" class="more scrolly">Veja o que está incluso!</a>
             </section>
 
             <!-- Two -->
@@ -66,7 +49,7 @@
                     <div class="image"><img src="images/pic01.webp" alt="" /></div><div class="content">
                         <h2>Cheiro de churrasco no ar!<br />
                         Música boa e uma costela suculenta esperando por você.</h2>
-                        <p>Reúna os amigos e venha viver esse momento inesquecível!</p>
+                        
                     </div>
                 </section>
                 <section class="spotlight">
@@ -78,33 +61,6 @@
                         <p>Mandioca e Vinagrete!</p>
                     </div>
                 </section>
-            </section>
-
-            <!-- Three -->
-            <section id="three" class="wrapper style3 special">
-                <div class="inner">
-                    <header class="major">
-                        <h2>As bebidas não estão inclusas, abaixo está o menu com os preços!</h2>
-                        <p>Confira nossa seleção de refrigerantes:</p>
-                    </header>
-                    <ul class="drink-list">
-                        <li><span class="drink-name">Coca-Cola 1L</span> <span class="drink-price">R$ 8,00</span></li>
-                        <li><span class="drink-name">Guaraná Antártica 1L</span> <span class="drink-price">R$ 7,50</span></li>
-                        <li><span class="drink-name">Fanta Laranja 1L</span> <span class="drink-price">R$ 7,00</span></li>
-                        <li><span class="drink-name">Sprite 1L</span> <span class="drink-price">R$ 7,50</span></li>
-                        <li><span class="drink-name">Pepsi 1L</span> <span class="drink-price">R$ 7,00</span></li>
-                        <li><span class="drink-name">Schweppes Citrus 1L</span> <span class="drink-price">R$ 7,50</span></li>
-                    </ul>
-                </div>
-            </section>
-
-            <!-- CTA -->
-            <section id="cta" class="wrapper style4">
-                <div class="inner">
-                    <ul class="actions stacked">
-                        <li><a href="#" class="button fit primary">Comprar Ingresso!</a></li>
-                    </ul>
-                </div>
             </section>
 
         </div>
@@ -141,32 +97,6 @@
                 });
             });
         </script>
-
-        <style>
-            .drink-list {
-                list-style: none;
-                padding: 0;
-                max-width: 400px;
-                margin: 0 auto;
-                text-align: left;
-            }
-
-            .drink-list li {
-                display: flex;
-                justify-content: space-between;
-                padding: 5px 0;
-                border-bottom: 1px solid #ccc;
-            }
-
-            .drink-name {
-                font-weight: bold;
-            }
-
-            .drink-price {
-                font-weight: bold;
-                color: #FFFF;
-            }
-        </style>
 
     </body>
 </html>
